--- a/src/components/post/header.module.scss
+++ b/src/components/post/header.module.scss
@@ -10,16 +10,11 @@
 }
 
 .title {
-	font-size: 3rem;
-	line-height: 1.1;
-	margin-bottom: 30px;
+	font-size: 2.5rem;
+	line-height: 1.5em;
+	margin: 30px 0;
 	color: rgba(157, 255, 236, 1);
 	letter-spacing: -0.025em;
-
-	// Larger on Retina
-	@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-		font-size: 3.5rem;
-	}
 
 	@media (prefers-color-scheme: light) {
 		color: rgb(6, 182, 212);
